# rust-confession-bot

./: .gitignore  Cargo.toml  README.md
src/: event_manager.rs  main.rs
